# lecture-automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  diagnose.js  generate-audio.js  list-models.js  main.js  package-lock.json  package.json  phase.md
config/: audit.json  icons.json  tts.json  video.json
data/: COMPONENT_CATALOG.md  lecture-01-01.json  lecture-01-01.md  lecture-01-02.json  lecture-01-03.json  lecture-01-04.json  lecture-01-04.md  lecture-01-script.txt  lecture-01.json  lecture-01.md  lecture-02-01.json  lecture-02-01.md  lecture-02-02.json  lecture-02-02.md  lecture-02-03.json  lecture-02-03.md  lecture-02-04.json  lecture-02-04.md  lecture-02-05.json  lecture-02-05.md  lecture-02-06.json  lecture-02-06.md  lecture-02-07.json  lecture-02-07.md  lecture-02.json  lecture-02.md  lecture-03-01.json  lecture-03-01.md  lecture-03-02.json  lecture-03-02.md  lecture-03-03.json  lecture-03-03.md  lecture-03-04.json  lecture-03-04.md  lecture-03-05.json  lecture-03-05.md  lecture-03-06.json  lecture-03-06.md  lecture-03-07.json  lecture-03-07.md  (+38 more)
data/basic/: lecture-01-orientation.md
data/old-script/: lecture-02-script.txt  lecture-04.json  lecture-05.json  lecture-06.json  lecture-07-script.txt
data/sample/: sample-spring-compare.json
docs/: architecture.md  component-props-reference.md  curriculum-automation-analysis.md  curriculum-basic.md  curriculum.md  json-conversion-rules.md  json-information-density-comparison.md  lambda-render-config.md  lecture-03-04-box-model-vertical-slice.md  master-audio-segmentation.md  per-scene-tts-consistency-design.md  playwright-actions.md  playwright-ai-live-demo-history.md  playwright-conversion-rules.md  playwright-live-demo-pd-design.md  remotion-component-audit.md  remotion-component-selection-rules.md  remotion-domain-visual-patterns.md  remotion-infographic-baseline-audit.md  remotion-infographic-enhancement-design.md  remotion-lambda-migration-plan.md  remotion-visual-style-presets.md  script-guidelines.md  script-review-guide.md  tts-history.md  tts-voices.md  web-editor-comparison.md
remotion-project/: package-lock.json  package.json
remotion-project/src/: MyCodeScene.tsx
scripts/: capture-screenshots.ts  generate-alignment.py  icon-coverage-check.mjs  insert-codepen-settle-waits.py  preview-motion.mjs  preview-spring-compare.mjs  preview.mjs  record-visuals.js  requirements-align.txt  rms-probe.ts  tts-sample.ts  validate-boundary-cut.ts
src/config/: index.js
src/providers/: GeminiAudioProvider.js
src/services/: AudioService.js
tmp/playwright-captures/02-03/: .mock.json
tmp/review/: basic-lecture-01-orientation.review.md  lecture-02.review.md
tools/tts/python/_common/: protocol.py
tools/tts/python/fish-speech/: .gitignore  README.md  pyproject.toml  synth.py
tools/tts/python/gpt-sovits/: README.md  pyproject.toml  synth.py
tools/tts/python/kokoro/: .gitignore  README.md  pyproject.toml  synth.py
tools/tts/python/xtts/: .gitignore  README.md  pyproject.toml  synth.py
