[project]
name = "lecture-tts-gpt-sovits"
version = "0.1.0"
description = "GPT-SoVITS TTS provider for lecture-automation. CPU FP32 forced."
requires-python = ">=3.10,<3.13"
dependencies = [
    # GPT-SoVITS 자체는 PyPI 의 안정 패키지가 없다. 본 PoC 는 git 클론을
    # tools/tts/python/gpt-sovits/models/GPT-SoVITS/ 에 받아 sys.path 에 추가하는 방식.
    # 아래는 그 추론 코드가 import 하는 공통 의존성.
    # torch 2.3+ 은 macOS x86_64 휠을 제공하지 않음 (Apple Silicon 전용).
    "torch>=2.0,<2.3",
    "torchaudio>=2.0,<2.3",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "transformers>=4.40,<4.46",
    "sentencepiece>=0.1.99",
    "pyopenjtalk>=0.3",
    "g2p-en>=2.1",
    "jieba>=0.42",
    "wordsegment>=1.3",
    "cn2an>=0.5",
    "pypinyin>=0.50",
    "fast-langdetect>=0.2",
    "ffmpeg-python>=0.2",
    "tqdm>=4.65",
    "PyYAML>=6.0",
]
