[project]
name = "lecture-tts-xtts"
version = "0.1.0"
description = "XTTS-v2 (Coqui) TTS provider for lecture-automation. Coqui Public Model License."
requires-python = ">=3.10,<3.13"
dependencies = [
    # 메인테인드 community fork. 원본 idiap/coqui-ai-TTS.
    # 모델 가중치는 별도 라이선스 (Coqui Public Model License).
    "coqui-tts>=0.24.0",
    "numpy>=1.24,<2.0",
    # torch 2.3+ 은 macOS x86_64 휠을 제공하지 않음 (Apple Silicon 전용).
    # Intel Mac 호환을 위해 2.2.x 로 제한.
    "torch>=2.0,<2.3",
    "torchaudio>=2.0,<2.3",
]
